# apsrc_v2x_rosbridge

./: .gitignore  CMakeLists.txt  README.md  nodelet.xml  package.xml
include/apsrc_v2x_rosbridge/: apsrc_v2x_rosbridge_nodelet.hpp
include/apsrc_v2x_rosbridge/asn1609dot2/: 1609-2-dump  BasePublicEncryptionKey.h  BitmapSspRange.h  Certificate.h  CircularRegion.h  CountryAndRegions.h  CountryOnly.h  EcdsaP384Signature.h  EciesP256EncryptedKey.h  ElevInt.h  Elevation.h  EncryptedData.h  EndEntityType.h  ExplicitCertificate.h  HashAlgorithm.h  HashedData.h  HashedId10.h  HashedId8.h  HeaderInfo.h  IValue.h  IdentifiedRegion.h  Ieee1609Dot2Content.h  Ieee1609Dot2Data.h  ImplicitCertificate.h  IssuerIdentifier.h  KnownLongitude.h  LaId.h  Latitude.h  LinkageData.h  LinkageSeed.h  Makefile.am.libasncodec  NinetyDegreeInt.h  PolygonalRegion.h  Psid.h  PsidSspRange.h  PublicEncryptionKey.h  PublicVerificationKey.h  RectangularRegion.h  RegionAndSubregions.h  SequenceOfCertificate.h  (+20 more)
include/apsrc_v2x_rosbridge/asnJ2735/: Acceleration.h  AccelerationConfidence.h  AddGrpB_Angle.h  AddGrpB_Elevation.h  AddGrpB_MsgCount.h  AddGrpB_TimeMark.h  AllowedManeuvers.h  AltitudeConfidence.h  AnimalPropelledType.h  AnimalType.h  AntiLockBrakeStatus.h  Attachment.h  AttachmentRadius.h  AxleLocation.h  BasicSafetyMessage.h  BasicVehicleClass.h  BrakeAppliedStatus.h  BumperHeight.h  CodeWord.h  ConnectingLane.h  ConnectionManeuverAssist-addGrpC.h  ConnectionManeuverAssist.h  Count.h  DDateTime.h  DDay.h  DMinute.h  DMonth.h  DSRC_Angle.h  DSRC_Elevation.h  DSRC_MsgCount.h  Day.h  DegreesLong.h  DeltaTime.h  DescriptiveName.h  DirectionOfUse.h  DisabledVehicle.h  DriveAxleLiftAirPressure.h  DriveAxleLubePressure.h  Duration.h  ElevationConfidence.h  (+162 more)
include/asn1609dot2/: AesCcmCiphertext.h  BitmapSsp.h  CertificateBase.h  CertificateId.h  CertificateType.h  Countersignature.h  CountryAndSubregions.h  CrlSeries.h  Duration.h  EccP256CurvePoint.h  EccP384CurvePoint.h  EcdsaP256Signature.h  EncryptedDataEncryptionKey.h  EncryptionKey.h  GeographicRegion.h  GroupLinkageValue.h  HashedId3.h  Hostname.h  KnownLatitude.h  LinkageValue.h  Longitude.h  Makefile.am.asn1convert  MissingCrlIdentifier.h  OneEightyDegreeInt.h  Opaque.h  PKRecipientInfo.h  PreSharedKeyRecipientInfo.h  PsidGroupPermissions.h  PsidSsp.h  RecipientInfo.h  SequenceOfHashedId3.h  SequenceOfPsid.h  SequenceOfRectangularRegion.h  SequenceOfRegionAndSubregions.h  ServiceSpecificPermissions.h  Signature.h  SignedData.h  SspRange.h  SubjectPermissions.h  SymmetricCiphertext.h  (+9 more)
include/asnJ2735/: AdvisorySpeed.h  AdvisorySpeedType.h  AltitudeValue.h  AmbientAirPressure.h  AmbientAirTemperature.h  ApproachID.h  AuxiliaryBrakeStatus.h  AxleWeight.h  AxleWeightSet.h  BasicVehicleRole.h  BrakeAppliedPressure.h  BrakeBoostApplied.h  CargoWeight.h  CoarseHeading.h  CoefficientOfFriction.h  CommonSafetyRequest.h  ComputedLane.h  Confidence.h  ConfidenceSet.h  Connection.h  DHour.h  DOffset.h  DSRC_TimeMark.h  DSRCmsgID.h  DSecond.h  DTime.h  DYear.h  DataParameters.h  DayOfWeek.h  DegreesLat.h  DeltaAngle.h  DistanceUnits.h  DriveAxleLocation.h  DriveAxleTemperature.h  DrivenLineOffsetLg.h  DrivenLineOffsetSm.h  DrivingWheelAngle.h  EmergencyDetails.h  EmergencyVehicleAlert.h  EmissionType.h  (+144 more)
launch/: apsrc_v2x_rosbridge.launch
libs/: how_to_install.md
msg/: AccelerationSet4Way.msg  AdvisorySpeed.msg  AdvisorySpeedType.msg  AllowedManeuvers.msg  BSMCore.msg  BSMpartIIExtension.msg  BasicSafetyMessage.msg  BrakeAppliedStatus.msg  BrakeSystemStatus.msg  ConnectingLane.msg  Connection.msg  ConnectsTo.msg  GenericLane.msg  IntersectionGeometry.msg  IntersectionState.msg  IntersectionStateList.msg  IntersectionStatusObject.msg  Intersections.msg  LaneAttributes.msg  LaneAttributesVehicle.msg  LaneDirection.msg  LaneSharing.msg  MapData.msg  MovementEvent.msg  MovementList.msg  MovementPhaseState.msg  NodeList.msg  NodeOffsetPointXY.msg  NodeXY.msg  PathHistory.msg  PathHistoryPoint.msg  PathPrediction.msg  Position3D.msg  SignalGroup.msg  SignalPhaseAndTiming.msg  VehicleSafetyExtensions.msg  VehicleSize.msg
src/: apsrc_v2x_rosbridge_node.cpp  apsrc_v2x_rosbridge_nodelet.cpp
test/: bsm.xml  bsmpublisher_test.py  map.xml  spat.xml
