<?xml version="1.0"?>
<package format="2">
  <name>apsrc_v2x_rosbridge</name>
  <version>0.0.0</version>
  <description>The apsrc_v2x_rosbridge package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="moji@todo.todo">moji</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>autoware_msgs</depend>
  <depend>network_interface</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>asnj2735</depend>
  <depend>asn1609dot2</depend>
  <exec_depend>message_runtime</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
